--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,9 +6,11 @@ block content
     include ./nav.pug
 
     include ./creditCalc.pug
-    include ./chart.pug
+    include ./creditList.pug
     include ./timetable.pug
     include ./profile.pug
+    
+    include ./modal.pug
 
     include ./footer.pug
 
