--- a/src/styles/less/main.less
+++ b/src/styles/less/main.less
@@ -130,6 +130,16 @@ footer {
 
       font-size: 1.3em;
     }
+    .editNeed {
+      color: @fontColor;
+      font-size: 1.2em;
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      &:hover, &:focus {
+        color: @clickColor;
+      }
+    }
   }
   #tot {
     .calc {
