--- a/src/pug/footer.pug
+++ b/src/pug/footer.pug
@@ -2,12 +2,12 @@ footer
   ul
     li(v-bind:class='{ active: activePage == 1 }', v-on:click='switchPage(1)')
       p
-        i.fa.fa-fw.fa-home
+        i.fa.fa-fw.fa-pie-chart
       p 學分統計
     li(v-bind:class='{ active: activePage == 2 }', v-on:click='switchPage(2)')
       p
-        i.fa.fa-fw.fa-bar-chart
-      p 課程檢視
+        i.fa.fa-fw.fa-list
+      p 學分列表
     li(v-bind:class='{ active: activePage == 3 }', v-on:click='switchPage(3)')
       p
         i.fa.fa-fw.fa-table
@@ -15,4 +15,4 @@ footer
     li(v-bind:class='{ active: activePage == 4 }', v-on:click='switchPage(4)')
       p
         i.fa.fa-fw.fa-user-circle
-      p 個人資料
+      p 帳戶設定
