--- a/src/pug/creditList.pug
+++ b/src/pug/creditList.pug
@@ -1,1 +1,12 @@
 #list.mainPage.container(v-if='activePage == 2')
+  div(v-for='(iv, years) in creditSummary')
+    h2.year(v-bind:id='years') {{ years }}
+    ul
+      li(v-for='(courseData, jk) in iv["total"]', v-bind:class='{ notpass: courseData["成績"] < 60 }', v-on:click='getCourseInfo(courseData)')
+        .list-text
+          h3.title {{ courseData['課程名稱'] }}
+          p.subject {{ courseData['所屬項目'] }}
+        .list-credit
+          p.credit {{ courseData['畢業學分'] }}
+        .list-icon
+          p.fa.fa-search
