--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -9,6 +9,7 @@ block content
     include ./creditList.pug
     include ./timetable.pug
     include ./profile.pug
+    include ./subjectList.pug
     
     include ./modal.pug
 
