--- a/src/pug/profile.pug
+++ b/src/pug/profile.pug
@@ -1,1 +1,17 @@
 #profile.mainPage.container(v-if='activePage == 4')
+  ul
+    li
+      p.name 杜杰 {{ studentId }}
+      p.dept 資工系
+    li#tableView
+      .list-text 課表形式
+      .list-btn
+        .btn-group(data-toggle='buttons')
+          label.btn.active(@click='tableView = 9')
+            input#option1(type='radio', name='options', autocomplete='off', checked='')
+            | 日間部
+          label.btn(@click='tableView = 13')
+            input#option3(type='radio', name='options', autocomplete='off')
+            | 日夜間部
+
+  button.login(@click='logout') 登出
