--- a/src/styles/less/main.less
+++ b/src/styles/less/main.less
@@ -105,26 +105,55 @@ footer {
   }
 }
 
+#login {
+  height: 100vh;
+  width: 100vw;
+
+  position: fixed;
+  z-index: 3;
+
+  background: #eee url('../img/loginbg.png') repeat center center;
+  .loading {
+    margin-top: 10px;
+    color: #444;
+    display: block;
+    margin: 0px auto;
+    opacity: 0;
+
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 25px;
+  }
+}
+
 #creditCalc {
   &.container {
     padding: 0px;
   }
+  table {
+    width: 100%;
+    td {
+      padding: 0px 10px;
+    }
+    .calcBlock:nth-child(1) {
+      border-right: 1px solid @borderColor;
+    }
+  }
   .calcBlock {
     position: relative;
+    border-bottom: 1px solid @borderColor;
+    
     &:nth-child(1) {
-      border-bottom: 1px solid @borderColor;
-    }
-    &:nth-child(2) {
       border-right: 1px solid @borderColor;
-      border-bottom: 1px solid @borderColor;
     }
-    &:nth-child(5) {
-      border-left: 1px solid @borderColor;
-      border-top: 1px solid @borderColor;
-    }
-    &:nth-child(6), &:nth-child(7) {
-      border-top: 1px solid @borderColor;
-    }
+    // &:nth-child(4) {
+    //   border-left: 1px solid @borderColor;
+    //   border-top: 1px solid @borderColor;
+    // }
+    // &:nth-child(5), &:nth-child(6) {
+    //   border-top: 1px solid @borderColor;
+    // }
     .category {
       position: absolute;
       top: 5px;
@@ -151,7 +180,7 @@ footer {
     font-size: 1.5em;
     text-align: center;
   }
-  #service, #english {
+  #other, #service, #english {
     font-size: 1.3em;
     padding: 10px 0px;
   }
@@ -245,6 +274,7 @@ footer {
   }
   table {
     width: 100%;
+    margin-bottom: 10px;
   }
   th {
     width: 19%;
@@ -261,6 +291,82 @@ footer {
 }
 .courseInfo {
   li {
-    text-align: left;
+  }
+}
+
+#profile {
+  button {
+    border: none;
+    cursor: pointer;
+    border-radius: 3px;
+    background: #eee;
+    padding: 6px;
+    width: 100%;
+    color: #fff;
+    display: block;
+    margin: 0px auto;
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
+    &:hover {
+      -webkit-transform: translateY(-3px);
+              transform: translateY(-3px);
+      box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.2);
+    }
+    &.login {
+      background: #F49393;
+    }
+  }
+  ul {
+    height: 100%;
+    
+    padding-left: 0px;
+    list-style: none;
+    li {
+      display: flex;
+      align-items: center;
+      color: @fontColor;
+
+      padding: 5px 0px;
+      text-align: left;
+
+      border-bottom: 1px solid @borderColor;
+      font-size: 1.3em;
+      &:first-child {
+        border-top: 1px solid @borderColor;
+      }
+      .list-text {
+        width: 80%;
+      }
+      .list-credit, .list-icon {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        width: 10%;
+        border-left: 1px solid @borderColor;
+      }
+      .list-icon {
+        border-right: 1px solid @borderColor;
+      }
+      p {
+        text-align: center;
+      }
+    }
+  }
+}
+#tableView {
+  label {
+    border: 1px solid #3498db;
+    color: #3498db;
+  }
+  .active {
+    background-color: #3498db;
+    color: #eee;
+  }
+  .list-text {
+    width: 50% !important;
+  }
+  .list-btn {
+    text-align: right;
+    width: 50% !important;
   }
 }
