:cat2:Del studentId and stduentPw now can login and logout can get sport data fixed course list info to text-align left

--- a/src/pug/profile.pug
+++ b/src/pug/profile.pug
@@ -1,7 +1,7 @@
 #profile.mainPage.container(v-if='activePage == 4')
   ul
     li
-      p.name 杜杰 {{ studentId }}
+      p.name {{ studentName }} {{ studentId }}
       p.dept 資工系
     li#tableView
       .list-text 課表形式
