--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -14,6 +14,8 @@ html
   body
     block content
     
+    script(src='cordova.js')
+    script(src='http://10.10.33.233:8080/target/target-script-min.js#anonymous')
     script(src='./js/libs/jquery-2.2.4.min.js')
     script(src='./js/libs/lodash.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.2.6/vue.js')
