--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,11 +1,13 @@
 extends layout
 block style
+  link(rel='stylesheet', href='./styles/loading.css')
   link(rel='stylesheet', href='./styles/login.css')
   link(rel='stylesheet', href='./styles/main.css')
 block content
   #app(v-cloak)
     include ./nav.pug
 
+    include ./loading.pug
     include ./login.pug
     include ./creditCalc.pug
     include ./creditList.pug
