--- a/src/pug/footer.pug
+++ b/src/pug/footer.pug
@@ -8,10 +8,10 @@ footer
       p
         i.fa.fa-fw.fa-list
       p 學分列表
-    li(v-bind:class='{ active: activePage == 3 }', v-on:click='switchPage(3)')
-      p
-        i.fa.fa-fw.fa-table
-      p 課表
+    //- li(v-bind:class='{ active: activePage == 3 }', v-on:click='switchPage(3)')
+    //-   p
+    //-     i.fa.fa-fw.fa-table
+    //-   p 課表
     li(v-bind:class='{ active: activePage == 4 }', v-on:click='switchPage(4)')
       p
         i.fa.fa-fw.fa-user-circle
