--- a/src/styles/less/login.less
+++ b/src/styles/less/login.less
@@ -1,10 +1,17 @@
 @mainColor: #3498db;
 
 #login {
+  height: 100vh;
+  width: 100vw;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: fixed;
+  z-index: 3;
+
+  background: #eee url('../img/loginbg.png') repeat center center;
   input::-webkit-input-placeholder, button {
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
@@ -21,6 +28,18 @@
     color: #7d7575;
     text-align: center;
     margin-bottom: 5px;
+  }
+  .loading {
+    margin-top: 10px;
+    color: #444;
+    display: block;
+    margin: 0px auto;
+    opacity: 0;
+
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 25px;
   }
 
   input {
