:cat2: add website page

--- a/src/pug/creditCalc.pug
+++ b/src/pug/creditCalc.pug
@@ -1,14 +1,103 @@
 #creditCalc.mainPage.container(v-if='activePage == 1')
-  #tot.col-xs-12.calcBlock(v-on:click='switchPage(2)')
+  #webView.hidden-xs.hidden-sm.col-md-12
+    .col-md-6
+      .block-profile
+        p 
+          | 姓名
+          span  {{ studentName }}
+        p 
+          | 學號
+          span  {{ studentId }}
+        p 
+          | 科系
+          span  {{ studentDept }}
+    .col-md-6
+      #totBlock.block-calc
+        .block-img(type='tot')
+        .block-info
+          h2.block-title 總學分
+          .credit-block
+            | {{ totCredit }}
+            | /
+            | {{ totNeedCredit }}
+          .credit-progress
+            .progressbar(v-bind:style="{ width: totPersent }")
+    .col-md-6
+      #majorBlock.block-calc
+        .block-img(type='major')
+        .block-info
+          h2.block-title 必修
+          .credit-block
+            | {{ thresholdInfo.major.credit }}
+            | /
+            | {{ thresholdInfo.major.needCredit }}
+          .credit-progress
+            .progressbar(v-bind:style='{ width: majorPersent }')
+    .col-md-6
+      #electiveBlock.block-calc
+        .block-img(type='elective')
+        .block-info
+          h2.block-title 選修
+          .credit-block
+            | {{ thresholdInfo.elective.credit }}
+            | /
+            | {{ thresholdInfo.elective.needCredit }}
+          .credit-progress
+            .progressbar(v-bind:style='{ width: electivePersent }')
+    .col-md-6
+      #generalBlock.block-calc
+        .block-img(type='general')
+        .block-info
+          h2.block-title 通識
+          .credit-block
+            | {{ thresholdInfo.general.credit }}
+            | /
+            | {{ thresholdInfo.general.needCredit }}
+          .credit-progress
+            .progressbar(v-bind:style='{ width: generalPersent }')
+    .col-md-6
+      #sportBlock.block-calc
+        .block-img(type='sport')
+        .block-info
+          h2.block-title 體育
+          .credit-block
+            | {{ thresholdInfo.sport.credit }}
+            | /
+            | {{ thresholdInfo.sport.needCredit }}
+          .credit-progress
+            .progressbar(v-bind:style='{ width: sportPersent }')
+    .col-md-6
+      #otherBlock.block-calc
+        .block-img(type='other')
+        .block-info
+          h2.block-title 其他
+          .credit-block
+            | {{ thresholdInfo.other.credit }} 學分
+    .col-md-6
+      #serviceBlock.block-calc
+        .block-img(type='service')
+        .block-info
+          h2.block-title 服務學習
+          .credit-block
+            | {{ serviceGap }}
+    .col-md-6
+      #englishBlock.block-calc
+        .block-img(type='english')
+        .block-info
+          h2.block-title 英文能力檢定
+          .credit-block
+            | {{ englishGap }}
+
+  #tot.col-sm-12.hidden-md.hidden-lg.block-calc(v-on:click='switchPage(2)')
     .circle-progress
     .calc
       | {{ totCredit }}
       | /
       | {{ totNeedCredit }}
     .category 總學分
-  table
+  table.hidden-md.hidden-lg
     tr
-      td#major.calcBlock(v-on:click='showList("major")')
+      td#major.block-calc(v-on:click='showList("major")')
         .circle-progress
         .calc
           | {{ thresholdInfo.major.credit }}
@@ -16,7 +105,7 @@
           | {{ thresholdInfo.major.needCredit }}
         i.editNeed.fa.fa-fw.fa-pencil(v-on:click='editNeedCrredit("必修", $event)')
         .category 必修
-      td#elective.calcBlock(v-on:click='showList("elective")')
+      td#elective.block-calc(v-on:click='showList("elective")')
         .circle-progress
         .calc
           | {{ thresholdInfo.elective.credit }}
@@ -25,32 +114,31 @@
         i.editNeed.fa.fa-fw.fa-pencil(v-on:click='editNeedCrredit("選修", $event)')
         .category 選修
     tr
-      td#general.calcBlock(v-on:click='showList("general")')
+      td#general.block-calc(v-on:click='showList("general")')
         .circle-progress
         .calc
           | {{ thresholdInfo.general.credit }}
           | /
           | {{ thresholdInfo.general.needCredit }}
         .category 通識
-      td#sport.calcBlock(v-on:click='showList("sport")')
+      td#sport.block-calc(v-on:click='showList("sport")')
         .circle-progress
         .calc
           | {{ thresholdInfo.sport.credit }}
           | /
           | {{ thresholdInfo.sport.needCredit }}
         .category 體育
-  #other.col-xs-12.calcBlock
-    .col-xs-7 其他課程
-    .col-xs-5
+  #other.col-sm-12.hidden-md.hidden-lg.block-calc
+    .col-sm-7 其他課程
+    .col-sm-5
       p
         | {{ thresholdInfo.other.credit }}
         | 學分
-  #service.col-xs-12.calcBlock
-    .col-xs-7 服務學習
-    .col-xs-5
+  #service.col-sm-12.hidden-md.hidden-lg.block-calc
+    .col-sm-7 服務學習
+    .col-sm-5
       p {{ serviceGap }}
-  #english.col-xs-12.calcBlock
-    .col-xs-7 英文能力檢定
-    .col-xs-5
+  #english.col-sm-12.hidden-md.hidden-lg.block-calc
+    .col-sm-7 英文能力檢定
+    .col-sm-5
       p {{ englishGap }}
-
