--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -3,12 +3,14 @@ block style
   link(rel='stylesheet', href='./styles/loading.css')
   link(rel='stylesheet', href='./styles/login.css')
   link(rel='stylesheet', href='./styles/main.css')
+  link(rel='stylesheet', href='./styles/web.css')
 block content
   #app(v-cloak)
     include ./nav.pug
 
     include ./loading.pug
     include ./login.pug
+
     include ./creditCalc.pug
     include ./creditList.pug
     include ./timetable.pug
