--- a/src/pug/creditList.pug
+++ b/src/pug/creditList.pug
@@ -1,6 +1,13 @@
 #list.mainPage.container(v-if='activePage == 2')
   div(v-for='(iv, years) in creditSummary')
-    h2.year(v-bind:id='years') {{ years }} 學期
+    .row.yaerTitle
+      .col-xs-7
+        h2.year(v-bind:id='years') {{ years }} 學期
+      .col-xs-5
+        h2.creditRatio
+          | {{ iv['getCredits'] }}
+          | /
+          | {{ iv['credits'] }}
     ul
       li(v-for='(courseData, jk) in iv["total"]', v-bind:class='{ notpass: courseData["成績"] < 60 }', v-on:click='getCourseInfo(courseData)')
         .list-text
