--- a/src/pug/nav.pug
+++ b/src/pug/nav.pug
@@ -1,3 +1,17 @@
-nav
+nav#mobileNav
   header
     h1 {{ navTitle }}
+nav#webNav
+  ul
+    li(@click='showLogoutMsg')
+      p 
+        i.fa.fa-fw.fa-sign-out(aria-hidden='true')
+        | 登出
+    li(@click='showDownload')
+      p
+        i.fa.fa-fw.fa-android(aria-hidden='true')
+        | Android版本
+    li(@click='showAbout')
+      p
+        i.fa.fa-fw.fa-info-circle(aria-hidden='true')
+        | 說明
