--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -6,10 +6,11 @@ html
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name='author', content='Sakamoto')
+    link(rel='shortcut icon' type='image/x-icon' href='./img/icon.png')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css')
     link(rel='stylesheet', href='https://rawgit.com/pguso/jquery-plugin-circliful/1.0.2/css/jquery.circliful.css')
-    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css')
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.5/sweetalert2.min.css')
     block style
   body
     block content
@@ -20,5 +21,5 @@ html
     script(src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.2.6/vue.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js')
     script(src='https://rawgit.com/pguso/jquery-plugin-circliful/1.0.2/js/jquery.circliful.js')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.5/sweetalert2.min.js')
     block js
