--- a/src/pug/profile.pug
+++ b/src/pug/profile.pug
@@ -23,4 +23,4 @@
     //-         input#option3(type='radio', name='options', autocomplete='off')
     //-         | 日夜間部
 
-  button.login(@click='logout') 登出
+  button.login(@click='showLogoutMsg') 登出
