:cat2: can save moved course

--- a/src/pug/nav.pug
+++ b/src/pug/nav.pug
@@ -15,3 +15,7 @@ nav#webNav
       p
         i.fa.fa-fw.fa-info-circle(aria-hidden='true')
         | 說明
+    li(@click='saveMoveSol')
+      p
+        i.fa.fa-fw.fa-floppy-o(aria-hidden='true')
+        | 儲存內容
