--- a/src/styles/less/web.less
+++ b/src/styles/less/web.less
@@ -47,7 +47,7 @@
     flex-direction: column;
     justify-content: center;
     span {
-      padding-right: 5px;
+      margin-left: 15px;
     }
     p {
       font-size: 1.2em;
