:cat2: update gulpfile & update apk

--- a/dest/styles/main.css
+++ b/dest/styles/main.css
@@ -299,7 +299,7 @@ footer ul li p:nth-child(1) {
 .yaer-title .year {
   text-align: left;
 }
-.yaer-title .creditRatio {
+.creditRatio {
   text-align: right;
 }
 #profile button {
