--- a/src/styles/less/login.less
+++ b/src/styles/less/login.less
@@ -43,11 +43,11 @@
   }
 
   input {
-    margin: 20px auto;
+    margin: 10px auto;
     width: 200px;
     display: block;
     border: none;
-    padding: 10px 0;
+    padding: 20px 0px 10px;
     border-bottom: solid 1px @mainColor;
     -webkit-transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
             transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
