--- a/src/pug/profile.pug
+++ b/src/pug/profile.pug
@@ -23,4 +23,5 @@
     //-         input#option3(type='radio', name='options', autocomplete='off')
     //-         | 日夜間部
 
+  button.save(@click='saveMoveSol') 儲存內容
   button.login(@click='showLogoutMsg') 登出
