--- a/src/styles/less/main.less
+++ b/src/styles/less/main.less
@@ -309,7 +309,11 @@ footer {
       box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.2);
     }
     &.login {
-      background: #F49393;
+      background-color: #F49393;
+    }
+    &.save {
+      margin-bottom: 5px;
+      background-color: #6892D5;
     }
   }
   ul {
