:cat2: add download link

--- a/src/pug/modal.pug
+++ b/src/pug/modal.pug
@@ -78,7 +78,7 @@
           span(aria-hidden='true') &times;
         h4.modal-title 下載Android版
       .modal-body
-        a(href='./data/nchu-calc.apk', download='nchu-calc.apk')
+        a(href='./data/nchu_calc.apk', download='nchu_calc.apk')
           img(src='./img/qr.png')
         p 點擊QR code即可下載apk
 
