:cat2: add mail and cc licenses

--- a/src/pug/modal.pug
+++ b/src/pug/modal.pug
@@ -94,5 +94,10 @@
           | 本系統的必修及選修畢業學分條件是根據資工系大三做預設，實際畢業學分還是要以各系上網站公告為準，可使用該欄位右上角的
           i.fa.fa-fw.fa-pencil
           | 符號進行編輯
+        p
+          | 如有對本網站有任何問題或是資料有誤請歡迎回報至
+          a.mail(href='mailto:hsingstat@gmail.com') hsingstat@gmail.com
         p 
           b 本系統不會去儲存使用者的任何帳號密碼及使用資訊
+        a(href='https://creativecommons.org/licenses/by-nc-sa/4.0/')
+          img(src='/img/cc-by-nc-sa.png', alt='知識共享署名-非商業性使用-相同方式共享', width='88', height='31')
