--- a/src/pug/modal.pug
+++ b/src/pug/modal.pug
@@ -97,7 +97,7 @@
         p
           | 如有對本網站有任何問題或是資料有誤請歡迎回報至
           a.mail(href='mailto:hsingstat@gmail.com') hsingstat@gmail.com
-        p 
-          b 本系統不會去儲存使用者的任何帳號密碼及使用資訊
+        p.notice
+          | 本系統不會去儲存使用者的任何帳號密碼及使用資訊
         a(href='https://creativecommons.org/licenses/by-nc-sa/4.0/')
           img(src='/img/cc-by-nc-sa.png', alt='知識共享署名-非商業性使用-相同方式共享', width='88', height='31')
