:cat2: del mail link

--- a/src/pug/modal.pug
+++ b/src/pug/modal.pug
@@ -96,7 +96,7 @@
           | 符號進行編輯
         p
           | 如有對本網站有任何問題或是資料有誤請歡迎回報至
-          a.mail(href='mailto:hsingstat@gmail.com') hsingstat@gmail.com
+          span.mail hsingstat@gmail.com
         p.notice
           | 本系統不會去儲存使用者的任何帳號密碼及使用資訊
         a(href='https://creativecommons.org/licenses/by-nc-sa/4.0/')
