--- a/src/styles/less/web.less
+++ b/src/styles/less/web.less
@@ -117,6 +117,9 @@
     font-size: 1.2em;
     margin-top: 10px;
   }
+  .mail {
+    color: #337ab7;
+  }
   .notice {
     font-weight: bold;
   }
