--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -6,6 +6,11 @@ html
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name='author', content='Sakamoto')
+    meta(property='og:title', content='學分計算機')
+    meta(property='og:url',  content='https://calc.hsingpicking.com.tw/')
+    meta(property='og:description', content='為中興大學大學部學生設計的學分計算機，可以簡單的看自己目前已修習學分。')
+    meta(property='og:image', content='/img/calc-md.jpg')
+    meta(property='og:image', content='/img/calc-lg.jpg')
     link(rel='shortcut icon' type='image/x-icon' href='./img/icon.png')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css')
